Add debugfs, parameters.

--- a/crypto/Makefile
+++ b/crypto/Makefile
@@ -1,2 +1,2 @@
-obj-$(CONFIG_CRYPTO_GOST_CRYPT) += gostcrypt.o
+obj-$(CONFIG_CRYPTO_GOST_CRYPT) += gostcrypt.o gost_debugfs.o
 obj-$(CONFIG_CRYPTO_GOST_HASH) += gosthash.o
