--- a/crypto/Kconfig
+++ b/crypto/Kconfig
@@ -18,4 +18,10 @@ config CRYPTO_GOST_HASH
 	---help---
     GOST R 34.11-94 hash function.
 
+config CRYPTO_GOST_DEBUGFS
+	bool "Enable GOST debugfs support"
+	depends on CRYPTO_GOST_CRYPT
+	---help---
+    GOST and GOSTHASH debugfs interface useful for debugging.
+
 endif # CRYPTO_GOST
